# lavaGameEngine

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  docNotes.txt
SMAA/: SMAA.hlsl
assets/: asteroids_LQ.mtl  astronautWalkLeft.sprt  astronautWalkRight.sprt  brick2.sprt  brickwall.mtl  brickwall2.mtl  brickwall3.mtl  bullet.sprt  cowboyHat.sprt  cowboyWalkLeft.sprt  cowboyWalkRight.sprt  desertScene.mtl  flamethrower.sprt  greebleWall.mtl  robotWalkLeft.sprt  robotWalkRight.sprt
include/: Camera.h  Framebuffer.h  SMAA.h  ShaderProgram.h  basicWorld.h  characters.h  collider.h  componentManager.h  engine.h  entities.h  entityCatagories.h  fighterSystem.h  fileUtils.h  fpsCounter.h  graphicsSystem.h  graphicsUtils.h  healthSystem.h  inputSystem.h  keyMappings.h  mesh.h  model.h  physicsSystem.h  positionSystem.h  screenBounds.h  shader.h  skybox.h  soundSystem.h  sprite.h  stb_image.h  system.h
shaders/: bloomPrepass.frag  blur.frag  deferredPointlight.frag  deferredPointlight.vert  deferredSunlight.frag  doNothing.frag  doNothing.vert  fillGbuffer.frag  forward.frag  lava.frag  lava.vert  pasteFramebuffer.vert  skybox.frag  skybox.vert  tonemap.frag
src/: Camera.cpp  Framebuffer.cpp  SMAA.cpp  ShaderProgram.cpp  basicWorld.cpp  characters.cpp  collider.cpp  componentManager.cpp  engine.cpp  entities.cpp  fighterSystem.cpp  fileUtils.cpp  glad.c  graphicsSystem.cpp  graphicsUtils.cpp  healthSystem.cpp  inputSystem.cpp  main.cpp  mesh.cpp  model.cpp  physicsSystem.cpp  positionSystem.cpp  shader.cpp  skybox.cpp  soundSystem.cpp  sprite.cpp
(+3 files in other folders)
